--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "startprodconfig": "ng serve --configuration production",
     "build": "ng build",
+    "devbuild": "ng build --configuration development",
+    "prodbuild": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
